--- a/WebApp/frontend/static/css/index.css
+++ b/WebApp/frontend/static/css/index.css
@@ -207,7 +207,8 @@
 }
 
 .DishInCartFooter {
+    margin-right: 10%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-end;
 }
