--- a/WebApp/frontend/static/css/index.css
+++ b/WebApp/frontend/static/css/index.css
@@ -128,7 +128,12 @@
 
 }
 
+.DishesTypeImage {
+    width: 100%;
+}
+
 .DishesList {
+    margin-top: 30px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
