--- a/WebApp/frontend/static/css/index.css
+++ b/WebApp/frontend/static/css/index.css
@@ -11,7 +11,7 @@
   --header-height: 10%;
 
   --menu-width: 1300px;
-  --dish-width: 600px;
+  --dish-width: 580px;
 
   --cart-width: 22%;
   --cart-offset_y: 78%;
@@ -69,8 +69,7 @@
 
 .HeaderMenuElement {
     text-align: center;
-    min-width: 25%;
-    max-width: 25%;
+    width: 25%;
 }
 
 .HeaderMenuElement a:link {
@@ -137,7 +136,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: flex-start;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .Dish {
@@ -145,12 +145,21 @@
     flex-direction: row;
     width: var(--dish-width);
     margin: 20px;
+    height: 60px;
+    padding: 5px;
+
+    align-items: center;
+
+    border-color: beige;
+    border: 1px;
+    border-style: solid;
 }
 
 .DishMain {
     display: flex;
     flex-direction: column;
-    width: 360px;
+    width: 540px;
+    margin-right: 30px;
 }
 
 .DishHeader {
@@ -197,12 +206,18 @@
     border-color: beige;
     border: 1%;
     border-style: solid;
+
+    text-align: center;
 }
 
 .DishInCart {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+
+    margin-bottom: 20px;
+
+    border-top: 1px solid beige;
 }
 
 .DishInCartHeader {
