--- a/WebApp/frontend/static/css/index.css
+++ b/WebApp/frontend/static/css/index.css
@@ -147,7 +147,7 @@
     display: flex;
     flex-direction: column;
     
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     background-color: black;
 }
@@ -157,7 +157,8 @@
 }
 
 .HomeInfoPanelContent {
-
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .OpeningHoursPanel {
@@ -189,6 +190,8 @@
 
     justify-content: space-between;
     align-items: center;
+
+    margin-bottom: 10px;
 }
 
 .Days {
