--- a/WebApp/frontend/templates/frontend/index.html
+++ b/WebApp/frontend/templates/frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Restaurant</title>
     {% load static %}
+    <script src = "https://www.paypal.com/sdk/js?client-id=ARwk_TsoPRALpZLvrF7WnOOIehIJZjyEo9RRlCuYd0cxv1WWvhPEdvDu8UT__YQhbZAd_Q2N6rs03JIS&currency=PLN" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link
       rel="stylesheet"
