-finished address form

--- a/WebApp/frontend/static/css/index.css
+++ b/WebApp/frontend/static/css/index.css
@@ -488,6 +488,12 @@
     border-style: solid;
 }
 
+.AddressFormTitle {
+    text-align: center;
+
+    color: beige;
+}
+
 .AddressFormRow {
     display: flex;
     flex-direction: row;
