--- a/WebApp/frontend/static/css/index.css
+++ b/WebApp/frontend/static/css/index.css
@@ -268,6 +268,15 @@
 
 }
 
+.MapPanel {
+    display: flex;
+    flex-direction: column;
+
+    width: 1152px;
+
+    margin-bottom: 50px;
+}
+
 /*Menu */
 
 .MenuPage {
