--- a/WebApp/frontend/static/css/index.css
+++ b/WebApp/frontend/static/css/index.css
@@ -586,6 +586,10 @@
     text-align: right;
 }
 
+.PaymentReturn {
+    color: beige;
+}
+
 .ReservationPageContent {
     margin-top: 100px;
     margin-bottom: 1200px;
